chatgpt api fine-tuning 진행 파일

--- a/fine-tuning.ipynb
+++ b/fine-tuning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1RapFYeR4lw3zKPDkL81f4nYC2wYwQmS_",
-      "authorship_tag": "ABX9TyMbdv43mXgNoVyzRqB1/CEL",
+      "authorship_tag": "ABX9TyNVZ7pyVC9C4h8wP9thsSRu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -249,7 +249,7 @@
       "cell_type": "code",
       "source": [
         "from openai import OpenAI\n",
-        "client=OpenAI(api_key='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')\n",
+        "client=OpenAI(api_key='apikey')\n",
         "client.files.create(\n",
         "  file=open(\"/content/drive/MyDrive/train_output.jsonl\", \"rb\"),\n",
         "  purpose=\"fine-tune\"\n",
